# django-vue-class

./: README.md  package-lock.json  pyproject.toml
backend/: README.md
backend/config/: urls.py
backend/usuario/: admin.py
backend/usuario/migrations/: 0001_initial.py
backend/usuario/utils/: cadastro.py  login.py
config/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.js
frontend/src/assets/styles/: tailwind.css
frontend/src/components/btns/: BtnPrimary.vue
frontend/src/components/forms/: AdditionalAuth.vue  ErrorMessage.vue  FormForgotPassowrd.vue  FormSignIn.vue  FormSignUp.vue
frontend/src/components/icons/: AuthIcon.vue  GithubIcon.vue  GoogleIcon.vue
frontend/src/components/misc/: LayoutComp.vue  LoadingComp.vue  TitlePage.vue
frontend/src/router/: index.js
frontend/src/service/: user.js
frontend/src/stores/: user.js
frontend/src/views/: HomeView.vue  NotFound.vue
frontend/src/views/auth/: ForgotPassword.vue  SignIn.vue  SignUp.vue
usuario/: admin.py  models.py
usuario/utils/: login.py
